chore(find): Fix please wait placeholder string

--- a/info.plist
+++ b/info.plist
@@ -345,7 +345,7 @@
 				<key>queuemode</key>
 				<integer>1</integer>
 				<key>runningsubtext</key>
-				<string>Finding todo</string>
+				<string>Finding todos ...</string>
 				<key>script</key>
 				<string>./node_modules/.bin/run-node index.js "$1"</string>
 				<key>scriptargtype</key>
